--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, rgba(0, 0, 0, 0.801), #8e8edd 50%);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 25px;
 }
@@ -20,7 +19,7 @@ body {
     background-color: white;
     padding: 30px;
     border-radius: 50px;
-    box-shadow: 0px 5px 30px hsla(0, 0%, 0%, 0.288);
+    box-shadow: 0px 5px 25px #00000033;
 }
 
 h1 {
@@ -61,7 +60,7 @@ input, select  {
     width: 100%;
     padding: 12px 13px;
     border: 2px solid #e0e0e0;
-    border-radius: 12px;
+    border-radius: 18px;
     font-size: 0.9rem;
     transition: border-color 0.3s;
 }
@@ -79,7 +78,7 @@ button {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background: linear-gradient(135deg, #0a1752,#1111ad);
     border: none;
-    border-radius: 20px;
+    border-radius: 30px;
     color: #ffffff;
     cursor: pointer;
     transition: transform 0.3s,box-shadow 0.3s;
@@ -117,6 +116,7 @@ button:active{
     display: flex;
     justify-content: space-around;
     text-align: center;
+
 }
 
 .age-unit {
